# ENT_Health_Report

./: .env.example  .gitignore  AGENTS.md  Chinese_Financial_DB_Design_Recommendations.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0aefb41fda80_initial_migration_with_users_.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai_configs.py  auth.py  deps.py  enterprises.py  financials.py  reports.py  users.py
backend/app/core/: config.py  encryption.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ai_config.py  enterprise.py  financial.py  report.py  user.py
backend/app/schemas/: __init__.py  ai_config.py  enterprise.py  financial.py  report.py  user.py
backend/app/scripts/: continuous_import.py  import_companies.py  import_financial_data.py  import_ths.py  supplement_income_statement.py  update_enterprise_info.py  verify_financial_data.py
backend/app/services/: __init__.py  akshare_client.py  batch_import.py  data_cleaner.py  enterprise_info.py  llm_service.py  report_generator.py  report_styles.py  report_task_service.py  task_manager.py
backend/app/services/agents/: __init__.py  peer_comparison_agent.py
backend/tests/: test_ai_configs.py  test_llm_service.py  test_peer_comparison_agent.py  test_report_flow_e2e.py  test_report_generator.py  test_task_manager.py
backend/tests/test_core/: test_encryption.py
frontend/: .dockerignore  Dockerfile  index.html  (+5 more)
(+13 files in other folders)
